<resources>
    <string name="app_name">SupportMyCar</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Registrate</string>

    <string name="txt_welcome">Bienvenido a SMC</string>
    <string name="user_success">Usuario creado correctamente</string>
    <string name="add_car_request">Necesitamos añadir el coche que usas</string>

    <string name="wrong_credentials">Credenciales incorrectas</string>
    <string name="back_to_UI">Volver a inicio</string>
    <string name="back_to_car">Volver al coche</string>

    <string name="txt_not_now">Ahora no</string>
    <string name="next">Siguiente</string>
    <string name="back">Atras</string>

    <string name="my_cars">Mis coches</string>
    <string name="edit_car">Editar coche</string>
    <string name="btn_add_car">Añadir coche</string>
    <string name="txt_edit_component">Personalizar componentes</string>

    <string name="remove">Borrar</string>


    <!-- CAR PROPERTIES         -->
    <string name="Car">Coche:</string>
    <string name="Matricula">Matricula:</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="Nearest_ITV">Proxima ITV:</string>
    <string name="actual_km">Km actual:</string>
    <string name="recomended_km">Km recomendados:</string>

    <!-- COMPONENT PROPERTIES   -->
    <string name="component">Componente:</string>

    <!--  CONFIGURATION         -->
    <string name="configuration">Configuracion</string>
    <string name="user">USUARIO</string>
    <string name="interface_">INFERFAZ</string>
    <string name="notifications">NOTIFICACIONES</string>
    <string name="language">IDIOMA</string>
    <string name="edit">EDITAR</string>
    <string name="spanish">ESPAÑOL</string>
    <string name="english">INGLES</string>
    <string name="theme">TEMA</string>
    <string name="light">CLARO</string>
    <string name="dark">OSCURO</string>
    <string name="emit_in">EMITIR CADA</string>
    <string name="days">DIAS</string>
    <string name="activate_in">ACTIVAR AL</string>
    <string name="km_o_rev">KM PARA REVISION</string>
</resources>