<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Coche: "
                android:textSize="15dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/component_car_brand"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/marca" />
            <TextView
                android:id="@+id/component_car_model"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/modelo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/Matricula" />
            <TextView
                android:id="@+id/component_car_plate"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Matricula" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/component"/>
            <TextView
                android:id="@+id/show_component_name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/component" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/recomended_km" />
            <TextView
                android:id="@+id/show_component_km_rev"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recomended_km" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/actual_km" />
            <TextView
                android:id="@+id/show_component_km"
                android:textStyle="bold"
                android:textColor="@color/yellow_500"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/actual_km" />

        </LinearLayout>


    </LinearLayout>
    <View
        android:id="@+id/divider_component"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        tools:ignore="DuplicateIds" />



</LinearLayout>