<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBE3B3">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txt_your_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/configuration"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintToptoTopOf="match_parent" />


            <Button
                android:id="@+id/ui_btn_my_cars"
                android:layout_width="136dp"
                android:layout_height="52dp"
                android:backgroundTint="#E69C79"
                android:text="@string/back_to_UI"
                android:textColor="#000000"

                app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="75dp"
                android:layout_marginBottom="88dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="26dp"
                android:background="@color/orange_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/iconColumn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user"
                            android:textSize="12sp" />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/interface_"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications"
                            android:textSize="8sp" />
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/yellow_500"/>

                    <!--        LAYOUT USUARIO          -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/LayoutUser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="20dp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="<Nombre>"
                            tools:layout_editor_absoluteX="16dp"
                            tools:layout_editor_absoluteY="65dp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="<Email>"
                            tools:layout_editor_absoluteX="16dp"
                            tools:layout_editor_absoluteY="101dp" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="PASSWORD"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="217dp" />

                        <EditText
                            android:id="@+id/editTextTextPersonName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="password actual"
                            android:inputType="textPersonName"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="259dp" />

                        <EditText
                            android:id="@+id/editTextTextPersonName2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="Nueva Password"
                            android:inputType="textPersonName"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="311dp" />

                        <EditText
                            android:id="@+id/editTextTextPersonName3"
                            android:layout_width="211dp"
                            android:layout_height="38dp"
                            android:ems="10"
                            android:hint="Confirma Password"
                            android:inputType="textPersonName"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.491"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="368dp" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Button"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="146dp" />

                        <Button
                            android:id="@+id/button2_"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Button"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="433dp" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--        LAYOUT INTERFAZ         -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/LayoutInterface"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/txt_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            tools:layout_editor_absoluteX="106dp"
                            tools:layout_editor_absoluteY="20dp" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Button"
                            tools:layout_editor_absoluteX="83dp"
                            tools:layout_editor_absoluteY="294dp" />


                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Español"
                            app:layout_constraintEnd_toStartOf="@+id/switch3"
                            app:layout_constraintHorizontal_bias="0.568"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="76dp" />

                        <Switch
                            android:id="@+id/switch3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="108dp"
                            tools:layout_editor_absoluteY="68dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ingles"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.485"
                            app:layout_constraintStart_toEndOf="@+id/switch3"
                            tools:layout_editor_absoluteY="76dp" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!--        LAYOUT NOTIFICACIONES   -->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/LayoutNotifications"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/txt_notifications"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:layout_editor_absoluteY="20dp" />

                        <Button
                            android:id="@+id/btn_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Button"
                            tools:layout_editor_absoluteX="83dp"
                            tools:layout_editor_absoluteY="294dp" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
                <!-- Columna de iconos a la izquierda -->


                <!-- Columna de elementos a la derecha -->


            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
